--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Description: Implementation of the function 'bioFabric' for creating scalable
 URL: http://www.BioFabric.org/
 Depends:
     igraph,
+    htmlwidgets,
     R (>= 3.0.1)
 License: MIT
 LazyLoad: yes
